--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -28,10 +28,12 @@ dependencies {
     })
     wearApp project(':wear')
     compile 'com.google.android.gms:play-services:10.2.0'
-    compile 'com.android.support:appcompat-v7:25.1.1'
-    compile 'com.android.support:design:25.1.1'
+    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.android.support:design:25.2.0'
+    compile 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32@aar'
     compile('com.mikepenz:materialdrawer:5.8.1@aar') {
         transitive = true
     }
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:recyclerview-v7:25.2.0'
 }
